Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.0.0
-
Fix Version/s: 5.5.1
-
Component/s: Quick: SceneGraph
-
Labels:None
Description
I am observing non-smooth rendering with an AMD Z430 GPU. The long frame times appear to occur due to QSGDefaultDistanceFieldGlyphCache::storeGlyphs() (in particular the call to resizeTexture() appears to be slow).
Changing QSGDefaultDistanceFieldGlyphCache::useWorkaroundBrokenFBOReadback() to return true greatly improves the situation. However, there are still significant missed frames.
Adding a QElapsedTimer to storeGlyphs, and flicking a list with text, the following times are initially reported (in ms):
178, 46, 72, 66, 69
with the workaround enabled, the times are (in ms):
21, 22, 30, 22, 21
Attachments
Issue Links
- relates to
-
QTBUG-59992 [DOC] please provide documentation for QML_USE_GLYPHCACHE_WORKAROUND
-
- Closed
-
-
QTBUG-19096 Cross-process cache for text renderer(s) in SceneGraph
-
- Open
-